--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -25,6 +25,7 @@ concurrency:
   cancel-in-progress: false
 
 env:
+  SITE_URL: "https://xhs.me/blog/"
   BUILD_PATH: "." # default value when not using subfolders
   # BUILD_PATH: subfolder
 
